--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-openssl": "*",
+        "ext-pdo": "*",
+        "giauphan/laravel-qr-code": "^1.0",
         "guzzlehttp/guzzle": "^7.9",
         "kitloong/laravel-migrations-generator": "7.1",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^3.1",
         "pusher/pusher-php-server": "^7.2",
@@ -21,11 +27,7 @@
         "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^17.4",
         "workerman/phpsocket.io": "^2.0",
-        "workerman/workerman": "^5.1",
-        "ext-json": "*",
-        "ext-pdo": "*",
-        "ext-mbstring": "*",
-        "ext-openssl": "*"
+        "workerman/workerman": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
