--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/fontawesome-free": "^7.0.0",
         "@kyvg/vue3-notification": "^3.4.1",
         "@motionone/dom": "^10.18.0",
+        "@vueuse/integrations": "^13.6.0",
         "bootstrap": "^5.3.7",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "^4.5.0",
@@ -31,6 +32,7 @@
         "datatables.net-vue3": "^3.0.4",
         "pinia": "^3.0.3",
         "pinia-plugin-persistedstate": "^4.4.1",
+        "qrcode": "^1.5.4",
         "redis": "^5.6.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
